--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     src="https://www.facebook.com/tr?id=485753495374523&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Meta Pixel Code -->
-
+    <link rel="stylesheet" href="/static/css/main.css">
     <link rel="stylesheet" href="https://digisky.ai/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
