--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    
+    <link rel="icon" type="image/x-icon" href="/dist/assets/digilogo12-BRrOkqva.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Digiskyfusion Freelancer</title>
+    <title>DigiSkyFusion Freelancer</title>
     
     <link rel="stylesheet" href="https://digisky.ai/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
