--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
       fbq('track', 'PageView');
     </script>
    
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16945354395">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16945354395');
+</script>
 
   </head>
   <body>
