--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
       <img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=485753495374523&ev=PageView&noscript=1"/>
     </noscript>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
