upload skills seo card

--- a/index.html
+++ b/index.html
@@ -73,7 +73,43 @@
 
 
 
+<!-- skills page card  -->
+ <!-- Redirect to digisky.ai skills card -->
+  <!-- <meta http-equiv="refresh" content="0; url=https://digisky.ai" /> -->
 
+  <title>Work from Home for Students | Flexible Online Jobs</title>
+  <meta name="description" content="Looking for work from home jobs for students? Explore online job opportunities you can do while studying. Flexible, remote, and verified roles." />
+  <meta name="keywords" content="work from home for students, online jobs for students, part time remote jobs, student jobs, DigiSkyfusion" />
+  <meta name="author" content="DigiSkyfusion" />
+
+  <!-- Canonical Tag skill card -->
+  <link rel="canonical" href="https://digiskyfusion.com/work-from-home-for-students" />
+   <!-- Open Graph / Facebook skill card -->
+  <meta property="og:title" content="Work from Home for Students | Online Job Opportunities" />
+  <meta property="og:description" content="Discover flexible work-from-home jobs for students. Start earning while studying with DigiSkyfusion." />
+  <meta property="og:url" content="https://digiskyfusion.com/work-from-home-for-students" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://digiskyfusion.com/images/student-work-from-home.jpg" />
+
+  <!-- Twitter skills card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Work from Home Jobs for Students | DigiSkyfusion" />
+  <meta name="twitter:description" content="Remote part-time jobs for students. Apply easily and earn online." />
+  <meta name="twitter:image" content="https://digiskyfusion.com/images/student-work-from-home.jpg" />
+
+  <!-- Favicon skills card -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+  <!-- Stylesheet skills card -->
+  <link rel="stylesheet" href="styles.css" />
+
+
+
+
+
+
+
+  
 
     <!-- adds -->
     <script>
