--- a/index.html
+++ b/index.html
@@ -138,7 +138,57 @@
 
 
 
-  
+  <!-- freelancer add skill page  -->
+    <title>Best Freelancing Platform in India | Start Earning Online</title>
+  <meta name="description" content="Looking for the best freelancing platform in India? Discover top websites to earn money online with flexible, remote jobs. Start today with DigiSkyfusion." />
+  <meta name="keywords" content="best freelancing platform in India, freelance jobs India, online earning sites, Indian freelancing websites, DigiSkyfusion" />
+  <meta name="author" content="DigiSkyfusion" />
+
+  <!-- Canonical URL freelancer add skill page -->
+  <link rel="canonical" href="https://digiskyfusion.com/best-freelancing-platform-in-india" />
+
+  <!-- Open Graph / Facebook freelancer add skill page -->
+  <meta property="og:title" content="Best Freelancing Platform in India | Online Work for Everyone" />
+  <meta property="og:description" content="Find India's top freelancing websites for students, freshers, and professionals. Work from home and earn securely." />
+  <meta property="og:url" content="https://digiskyfusion.com/best-freelancing-platform-in-india" />
+<meta property="og:type" content="website" />
+  <meta property="og:image" content="https://digiskyfusion.com/images/freelance-platform-india.jpg" />
+
+  <!-- Twitter freelancer add skill page -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Top Freelancing Sites in India | Work from Home with DigiSkyfusion" />
+  <meta name="twitter:description" content="Explore India's best freelancing platforms for beginners and experts. Get online jobs and start earning." />
+  <meta name="twitter:image" content="https://digiskyfusion.com/images/freelance-platform-india.jpg" />
+
+  <!-- Favicon freelancer add skill page -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+  <!-- Stylesheet freelancer add skill page -->
+  <link rel="stylesheet" href="styles.css" />
+
+
+
+  <!-- clinet page all  -->
+   <title>Best Freelance Platforms for Students | Work from Home & Earn</title>
+  <meta name="description" content="Explore the best freelance websites for students and 10th pass individuals. Start earning from home with trusted online platforms." />
+  <meta name="keywords" content="best freelance platforms for students, freelance websites for 10th pass, work from home, online earning for students" />
+  <meta name="author" content="DigiSkyfusion" />
+
+  <!-- Canonical URL clinet page all -->
+  <link rel="canonical" href="https://digiskyfusion.com/best-freelance-platforms-for-students" />
+
+  <!-- Open Graph / Facebook clinet page all -->
+  <meta property="og:title" content="Top Freelance Platforms for Students | Work from Home Jobs" />
+  <meta property="og:description" content="List of best freelance platforms for students to work online. Flexible, trusted and beginner-friendly websites to earn." />
+  <meta property="og:url" content="https://digiskyfusion.com/best-freelance-platforms-for-students" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://digiskyfusion.com" />
+
+
+
+
+
+
 
     <!-- adds -->
     <script>
@@ -153,7 +203,8 @@
       fbq('init', '485753495374523');
       fbq('track', 'PageView');
     </script>
-   
+
+
    <!-- Google tag (gtag.js)  -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16945354395">
 </script>
@@ -164,8 +215,6 @@
 
   gtag('config', 'AW-16945354395');
 </script>
-
-
 
 
 
@@ -192,7 +241,7 @@
   "publisher": {
     "@type": "Organization",
     "name": "DigiSky.ai"
-  }
+}
 }
 </script>
 
@@ -207,7 +256,7 @@
     "publisher": {
       "@type": "Organization",
       "name": "DigiSky.ai"
-    }
+}
   }
   </script>
   
@@ -222,7 +271,7 @@
     "publisher": {
       "@type": "Organization",
       "name": "DigiSky.ai"
-    }
+}
   }
   </script>
   
@@ -237,11 +286,9 @@
     "publisher": {
       "@type": "Organization",
       "name": "DigiSky.ai"
-    }
+}
   }
   </script>
-  
-  
 
 
 
