--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
 <meta property="og:url" content="https://digisky.ai/online-jobs">
 <meta property="og:type" content="website">
 
-
+<!--Blogpage meta tags-->
+<meta name="description" content="Discover the best online jobs in 2025. Work from home, earn real income, and find freelancing opportunities with platforms like DigiSky.ai." />
+<meta name="description" content="Find the best online jobs for 12th pass students in 2025. Work from home, earn money, and build your career with freelancing platforms like DigiSky.ai." />
+<meta name="description" content="Discover the best freelancing platforms in 2025. Find jobs, earn from home, and grow your career online with trusted websites like DigiSky.ai." />
+<meta name="description" content="Find genuine online jobs for 10th pass students in 2025. No degree required. Start earning from home with easy freelance and work-from-home opportunities." />
 
 
 <!-- choose us page seo tags -->
