--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <meta name="description" content="Find genuine online jobs for 10th pass students in 2025. No degree required. Start earning from home with easy freelance and work-from-home opportunities." />
 <meta name="description" content="Begin your freelance journey on India’s most trusted freelancing platform for beginners. Learn how DigiSky.ai helps you get real projects, skill guidance & secure income.">
 <meta name="description" content="Discover how to earn online after 12th with real, beginner-friendly opportunities. From freelancing to content creation – start earning today with DigiSky.ai.">
+<meta name="description" content="Looking to earn money online in India without any investment? Discover 10 genuine ways to start earning from home as a student or beginner with DigiSky.ai.">
 
 
 <!-- choose us page seo tags -->
